Readonly menuitem options...
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3200 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -44,7 +44,7 @@ newmenu maps
 // Add maps to the below list to include them in the normal map menu (also for botmaps).
 alias defaultmaps "ac_arctic ac_complex ac_depot ac_desert ac_desert2 ac_desert3 ac_elevation ac_keller ac_mines ac_power ac_scaffold ac_shine ac_snow ac_sunset ac_toxic ac_urban"
 genmapitems	$defaultmaps
-menuitem	""""
+menuitem	"" -1
 menuitem	"Show all maps..." [ showmenu "all maps" ]
 
 newmenu "all maps"
@@ -56,7 +56,7 @@ newmenu maps_flags
 // Add maps to the below list to include them in the CTF, KTF & TKTF map menu. Maps should contain flags here.
 alias ctfmaps "ac_depot ac_desert3 ac_elevation ac_keller ac_mines ac_power ac_shine ac_sunset ac_urban"
 genmapitems $ctfmaps
-menuitem """"
+menuitem "" -1
 menuitem "Show all maps.." [showmenu "all maps"]
 
 
@@ -86,26 +86,23 @@ menudirlist "demos/" "dmo" "demo $arg1"
 
 newmenu about
 
-menuitem "AssaultCube v1.0" ""
+menuitem "AssaultCube v1.0" -1
 menuitem "                     ...Help"		"showmenu help"
 menuitem "                     ...Credits"	"showmenu Credits"
-menuitem ""
-menuitem "by 'Rabid Viper Productions'" "showmenu credits"
-menuitem "http://assault.cubers.net" "echo sorry no built-in web browser yet :)"
-menuitem "a cube mod/tc based on the" ""
-menuitem ""
-menuitem "Cube Engine" ""
-menuitem "by Wouter 'Aardappel' van Oortmerssen" ""
-menuitem "and others" ""
-menuitem "http://www.cubeengine.com/" "echo sorry no built-in web browser yet :)"
-
+menuitem "" -1
+menuitem "by 'Rabid Viper Productions'" "showmenu Credits"
+menuitem "1http://assault.cubers.net/" -1			// URL's are colourised blue, like a hyperlink normally is...
+menuitem "" -1
+menuitem "AssaultCube is a total-conversion of the CUBE engine" -1
+menuitem "...by Wouter 'Aardappel' van Oortmerssen, and others." -1
+menuitem "1http://www.cubeengine.com/" -1
 
 newmenu help
 
 menuitem "AssaultCube reference"	"showmenu reference"
 menuitem "Search the reference"		[ showmenu "Reference search" ]
 menuitem "Keyboard controls"			"showmenu controls"
-menuitem "" ""
+menuitem "" -1
 menuitem "...for further information/help see the README" "echo 2The readme can be found in the base AssaultCube directory."
 
 newmenu "Reference search"
@@ -116,79 +113,79 @@ menuitem "2		  [ Search ]			" "docfind $docsearchstring"
 
 newmenu Credits
 
-menuitem "Project Leaders" ""
-menuitem "-----------------" ""
-menuitem "driAn				Lead coder, OpenAL, OpenGL, gameplay code." ""
-menuitem "makkE				Lead artist, models, skins, animations," ""
-menuitem "				mapping, 2D-art, textures, sounds." ""
-menuitem "" ""
-menuitem "Active Developers/Contributors" ""
-menuitem "-----------------------------------" ""
-menuitem "eihrul				Coder, OpenGL expert, Enet Library, Cube2 backporting." ""
-menuitem "RandumIdiot			Mapping, documentation, tester, clean-up crew." ""
-menuitem "Flowtron			Universal team member, additional code, admin, community chief." ""
-menuitem "stef				Bug fixes, additional code, server stuff, new modes." ""
-menuitem "Toca				Mapmodels, sounds, textures, other stuff."
-menuitem "" ""
-menuitem "Community Mappers" ""
-menuitem "-----------------------" ""
-menuitem "Shadow			Map: ac_elevation." ""
-menuitem "Wotwot				Map: ac_power, plus textures." ""
-menuitem "daMfr0				Map: ac_snow." ""
-menuitem "MitaMAN			Map: ac_depot, plus textures." ""
-menuitem "Nieb				Map: ac_desert2, ac_desert3, plus mapmodels, 2D-art and hosting." ""
-menuitem "Archangel			Map: ac_urban." ""
-menuitem "Mr.Floppy			Map: ac_keller, plus textures."
-menuitem "DogDancing			Map: ac_shine, ac_scaffold, textures."
-menuitem "R4zor				Map: ac_sunset."
-menuitem "KC				Map: ac_arctic."
-menuitem "" ""
-menuitem "Special thanks" ""
-menuitem "----------------" ""
-menuitem "Aardappel & others		The Cube Game/Engine." ""
-menuitem "Arghvark			Previous project leader, game concept, code." ""
-menuitem "Verbal_				Q&A, advisor, lead tester, pro-coffee service." ""
-menuitem "Rick Helmus			Bot code." ""
-menuitem "absinth				Packaging AssaultCube for Mac." ""
-menuitem "dtd				Hosting." ""
-menuitem "Grenadier (aurhat)		Small code contributions/fixes." ""
-menuitem "KanslozeClown			Code contributions and advice." ""
-menuitem "" ""
-menuitem "Resources" ""
-menuitem "------------" ""
-menuitem "JCDPC				Laptop mapmodel, textures." ""
-menuitem "Topher				Some crosshairs." ""
-menuitem "leileilol				Bullethole image." ""
-menuitem "Steini				Skyboxes." ""
-menuitem "Antiklimax			Sniper scope." ""
-menuitem "SimonOC			Nightball/Graveyard skymap." ""
-menuitem "LadyNightHawk		 	InhCanyons skymap." ""
-menuitem "Sock 				Iceflow skymap." ""
-menuitem "HitmanDaz[MT]		Playermodels"
-menuitem "" ""
-menuitem "Texture sources" ""
-menuitem "------------------""
-menuitem "Articool, Boeck, Craig Fortune, Digital Flux, mayang.com, imageafter.com, " ""
-menuitem "Craig Fortune, Digital Flux, mayang.com, afflict.net, Rohrschach, Lemog 3D," ""
-menuitem "Golgotha team, NOCTUA, Chris Zastrow, 3D Cafe, Kurt Keslar, John Solo," ""
-menuitem "drunkenM, www.openfootage.com." ""
-menuitem ""
-menuitem "Sound sources"
-menuitem "----------------""
-menuitem "DCP, wildweasel (Vote sounds), Tremulous team (Gib sound), mwl500, fonogeno," ""
-menuitem "Lukas Zapletal & Ludek Horacek (Music), livindead, NoiseCollector, droboide," ""
-menuitem "nicStage, acclivity, Syna Max, ermine, ReWired, nofeedbak, vuzz, mich3d," ""
-menuitem "Rhedcerulean, www.soundsnap.com, dommygee, fresco, WIM, ignotus, acclivity, Bahutan"
-menuitem "" ""
-menuitem "Also thanks to kurtis84, player1, quase, exis, talou and others for testing." ""
-menuitem "Thanks to flowtron and exis for organising the 0.93 AssaultCube Release Cup." ""
+menuitem "Project Leaders" -1
+menuitem "-----------------" -1
+menuitem "driAn				Lead coder, OpenAL, OpenGL, gameplay code." -1
+menuitem "makkE				Lead artist, models, skins, animations," -1
+menuitem "				mapping, 2D-art, textures, sounds." -1
+menuitem "" -1
+menuitem "Active Developers/Contributors" -1
+menuitem "-----------------------------------" -1
+menuitem "eihrul				Coder, OpenGL expert, Enet Library, Cube2 backporting." -1
+menuitem "RandumIdiot			Mapping, documentation, tester, clean-up crew." -1
+menuitem "Flowtron			Universal team member, additional code, admin, community chief." -1
+menuitem "stef				Bug fixes, additional code, server stuff, new modes." -1
+menuitem "Toca				Mapmodels, sounds, textures, other stuff." -1
+menuitem "" -1
+menuitem "Community Mappers" -1
+menuitem "-----------------------" -1
+menuitem "Shadow			Map: ac_elevation." -1
+menuitem "Wotwot				Map: ac_power, plus textures." -1
+menuitem "daMfr0				Map: ac_snow." -1
+menuitem "MitaMAN			Map: ac_depot, plus textures." -1
+menuitem "Nieb				Map: ac_desert2, ac_desert3, plus mapmodels, 2D-art and hosting." -1
+menuitem "Archangel			Map: ac_urban." -1
+menuitem "Mr.Floppy			Map: ac_keller, plus textures." -1
+menuitem "DogDancing			Map: ac_shine, ac_scaffold, textures." -1
+menuitem "R4zor				Map: ac_sunset." -1
+menuitem "KC				Map: ac_arctic." -1
+menuitem "" -1
+menuitem "Special thanks" -1
+menuitem "----------------" -1
+menuitem "Aardappel & others		The Cube Game/Engine." -1
+menuitem "Arghvark			Previous project leader, game concept, code." -1
+menuitem "Verbal_				Q&A, advisor, lead tester, pro-coffee service." -1
+menuitem "Rick Helmus			Bot code." -1
+menuitem "absinth				Packaging AssaultCube for Mac." -1
+menuitem "dtd				Hosting." -1
+menuitem "Grenadier (aurhat)		Small code contributions/fixes." -1
+menuitem "KanslozeClown			Code contributions and advice." -1
+menuitem "" -1
+menuitem "Resources" -1 
+menuitem "-----------" -1
+menuitem "JCDPC				Laptop mapmodel, textures." -1
+menuitem "Topher				Some crosshairs." -1
+menuitem "leileilol				Bullethole image." -1
+menuitem "Steini				Skyboxes." -1
+menuitem "Antiklimax			Sniper scope." -1
+menuitem "SimonOC			Nightball/Graveyard skymap." -1
+menuitem "LadyNightHawk		 	InhCanyons skymap." -1
+menuitem "Sock 				Iceflow skymap." -1
+menuitem "HitmanDaz[MT]		Playermodels" -1
+menuitem "" -1
+menuitem "Texture sources" -1
+menuitem "------------------" -1
+menuitem "Articool, Boeck, Craig Fortune, Digital Flux, mayang.com, imageafter.com, " -1
+menuitem "Craig Fortune, Digital Flux, mayang.com, afflict.net, Rohrschach, Lemog 3D," -1
+menuitem "Golgotha team, NOCTUA, Chris Zastrow, 3D Cafe, Kurt Keslar, John Solo," -1
+menuitem "drunkenM, www.openfootage.com." -1
+menuitem "" -1
+menuitem "Sound sources" -1
+menuitem "----------------" -1
+menuitem "DCP, wildweasel (Vote sounds), Tremulous team (Gib sound), mwl500, fonogeno," -1
+menuitem "Lukas Zapletal & Ludek Horacek (Music), livindead, NoiseCollector, droboide," -1
+menuitem "nicStage, acclivity, Syna Max, ermine, ReWired, nofeedbak, vuzz, mich3d," -1
+menuitem "Rhedcerulean, www.soundsnap.com, dommygee, fresco, WIM, ignotus, acclivity, Bahutan" -1
+menuitem "" -1
+menuitem "Also thanks to kurtis84, player1, quase, exis, talou and others for testing." -1
+menuitem "Thanks to flowtron and exis for organising the 0.93 AssaultCube Release Cup." -1
 
 
 // Show quit dialog if enabled
 newmenu quit
 menuitem "Yes, quit now" "quit"
-menuitem "No" " "
-menuitem "" ""
+menuitem "No" "showmenu "" "
+menuitem "" -1
 menuitemcheckbox "Don't ask next time: " "(= $askquit 0)" "askquit = (= $arg1 0)"
 
 alias savequit [
