--- a/ac/config/menus_bot.cfg
+++ b/ac/config/menus_bot.cfg
@@ -110,7 +110,7 @@ newmenu "Creating bot waypoints"
 menuitem "Waypoints..."			[ showmenu "Waypoints" ]
 menuitem "Paths..."			[ showmenu "Paths" ]
 menuitem "Other operations..."		[ showmenu "Other bot operations" ]
-menuitem """"
+menuitem "" -1
 menuitem "Flood map with waypoints"	"wpflood"
 menuitem "Save bot waypoints"		"wpsave"
 
@@ -119,7 +119,7 @@ newmenu Waypoints
 
 menuitem "Add a waypoint"			"addwp 0"
 menuitem "Add auto-connecting waypoint"		"addwp 1"
-menuitem """"
+menuitem "" -1
 menuitem "Delete a waypoint"			"delwp"
 menuitem "Delete all waypoints"			[ showmenu "Delete all waypoints?" ]
 
@@ -130,7 +130,7 @@ menuitem "Create Start of 2-way path"			"addpath2way1"
 menuitem "Create End of 2-way path"			"addpath2way2"
 menuitem "Delete Start of 2-way path"		"delpath2way1"
 menuitem "Delete End of 2-way path"		"delpath2way2"
-menuitem """"
+menuitem "" -1
 menuitem "Create Start of 1-way path"			"addpath1way1"
 menuitem "Create End of 1-way path"			"addpath1way2"
 menuitem "Delete Start of 1-way path"		"delpath1way1" 
@@ -142,7 +142,7 @@ newmenu "Other bot operations"
 menuitem "Set waypoint as jumpable"		"setjumpwp"
 menuitem "Unset waypoint as jumpable"		"unsetjumpwp"
 menuitem "Set waypoint direction (yaw)"		"setwpyaw"
-menuitem """"
+menuitem "" -1
 menuitemslider "Waypoint visibility: " 0 1 " " 1 ["Hide waypoints" "Show waypoints"] "wpvisible $arg1"
 menuitemslider "Select/place waypoints by: " 0 1 "($xhairwpsel)" 1 ["Your current location" "Clicking a point on the grid"] "xhairwpsel $arg1"
 
