--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -14,7 +14,7 @@ menuitem "Pickups..."				"showmenu Pickups"
 menuitem "Arches and slopes..."			"showmenu Arches"
 menuitem "Map operations..."			[ showmenu "Map operations" ]
 menuitem "Bots..."				[ showmenu "Creating bot waypoints" ]
-menuitem "Help?"				[ echo "Please read the AssaultCube readme which has a detailed guide on mapediting. ]
+menuitem "Help?"				[ echo "2Please read the AssaultCube readme which has a detailed guide on mapediting. ]
 
 
 //Lighting menu.
@@ -22,7 +22,7 @@ newmenu "Lighting"
 
 menuitem "Add white lights	"		[ showmenu "White light" ]
 menuitem "Add coloured lights	"		[ showmenu "Coloured light" ]
-menuitem """"
+menuitem "" -1
 menuitemcheckbox "Enable fullbright: 	" "$fullbright" [ fullbright $arg1 ]
 
 
@@ -30,18 +30,18 @@ newmenu "White light"
 
 menuitemslider "Light radius: " 1 32 " " 1 "" "alias wlight $arg1"
 menuitemslider "Brightness: " 1 255 " " 5 "" "alias wlight1 $arg1"
-menuitem ""
+menuitem "" -1
 menuitem "2		[ OK ]		" "newent light $wlight $wlight1"
 
 
 newmenu "Coloured light"
 
 menuitemslider "Light radius: " 1 32 " " 1 "" "alias clight $arg1"
-menuitem ""
+menuitem "" -1
 menuitemslider "Red light: " 1 255 " " 5 "" "alias clight1 $arg1"
 menuitemslider "Green light: " 1 255 " " 5 "" "alias clight2 $arg1"
 menuitemslider "Blue light: " 1 255 " " 5 "" "alias clight3 $arg1"
-menuitem ""
+menuitem "" -1
 menuitem "2		[ OK ]		" "newent light $clight $clight1 $clight2 $clight3"
 
 //Entities menu
@@ -50,10 +50,10 @@ newmenu Entities
 menuitem "RVSF Spawn point"	"newent playerstart 1"
 menuitem "CLA Spawn point"	"newent playerstart 0"
 menuitem "FFA Spawn point"	"newent playerstart 100"
-menuitem ""
+menuitem "" -1
 menuitem "RVSF CTF Flag"	"newent ctf-flag 1"
 menuitem "CLA CTF Flag"		"newent ctf-flag 0"
-menuitem ""
+menuitem "" -1
 menuitem "Ladder entity"	"saycommand /newent ladder "
 
 //Pickups menu
@@ -74,7 +74,7 @@ menuitem "Arch with sideways curves (delta 1)"	"heightfield 2; arch 1"
 menuitem "Arch with sideways curves (delta 2)"	"heightfield 2; arch 2"
 menuitem "Arch with sideways curves (delta 3)"	"heightfield 2; arch 3"
 menuitem "Arch with sideways curves (delta 4)"	"heightfield 2; arch 4"
-menuitem ""
+menuitem "" -1
 menuitem "Slope increase 2 left-right"		"heightfield 0; slope 2 0"
 menuitem "Slope decrease 2 left-right"		"heightfield 0; slope -2 0"
 menuitem "Slope increase 2 top-bottom"		"heightfield 0; slope 0 2"
@@ -83,7 +83,7 @@ menuitem "Slope increase 1 left-right"		"heightfield 0; slope 1 0"
 menuitem "Slope decrease 1 left-right"		"heightfield 0; slope -1 0"
 menuitem "Slope increase 1 top-bottom"		"heightfield 0; slope 0 1"
 menuitem "Slope decrease 1 top-bottom"		"heightfield 0; slope 0 -1"
-menuitem ""
+menuitem "" -1
 menuitem "Fix heightfielding"                    "solid 0; slope 0 0"
 
 
@@ -130,7 +130,7 @@ menuitem "Ladder(8)"			"newent mapmodel 3"
 menuitem "Ladder(10)"			"newent mapmodel 4"
 menuitem "Ladder(11)"			"newent mapmodel 5"
 menuitem "Ladder(15)"			"newent mapmodel 6"
-menuitem "" ""
+menuitem "" -1
 menuitem "Wire stairs (Top)"		"saycommand /newent mapmodel 79"
 menuitem "Wire stairs (Bottom)"		"saycommand /newent mapmodel 80"
 
@@ -226,11 +226,11 @@ menuitem "Wire fence"			"newent mapmodel 13"
 menuitem "Wire fencepost"		"newent mapmodel 14"
 menuitem "Open wire fence-gate"		"newent mapmodel 15" 
 menuitem "Closed wire fence-gate"	"newent mapmodel 16"
-menuitem ""
+menuitem "" -1
 menuitem "Corrugated fence"		"newent mapmodel 102"
 menuitem "Corrugated fence 2"		"newent mapmodel 103"
 menuitem "Corrugated fence post"	"newent mapmodel 66"
-menuitem ""
+menuitem "" -1
 menuitem "Guard rail"			"newent mapmodel 67"
 menuitem "Guard rail 2"			"newent mapmodel 68"
 menuitem "Guard rail pole"		"newent mapmodel 106"
