--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -8,13 +8,13 @@ menuitemtextinput "Nickname:  " "result $curname" "name $arg1"
 menuitem "Change to the enemy team"        "changeteam"
 menuitem "Change weapon"        	"showmenu Weapons"
 menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
-menuitem "" ""
+menuitem "" -1
 menuitem "Set mode/map"			"showmenu Gamemode"
 menuitem "Kick/ban player"		"showmenu kick/ban"
 menuitem "Adjust teams"			[ showmenu "Team adjustment" ]
 menuitem "Change mastermode" 		"showmenu Mastermode"
 menuitem "Demos"			"demomenu"
-menuitem ""
+menuitem "" -1
 menuitem "3Disconnect"			"disconnect"
 menuitem "2Go back to Main Menu"	"showmenu main"
 
@@ -27,13 +27,13 @@ menuitem "Kick/ban player"		"showmenu kick/ban"
 menuitem "Adjust teams"			[ showmenu "Team adjustment" ]
 menuitem "Change mastermode" 		"showmenu Mastermode"
 menuitem "Give admin"			[ showmenu "give admin" ]
-menuitem ""
+menuitem "" -1
 menuitemtextinput "Nickname:  " "result $curname" "name $arg1"
 menuitem "Change to the enemy team"        "changeteam"
 menuitem "Change weapon"        	"showmenu Weapons"
 menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
 menuitem "Demos"			"demomenu"
-menuitem "" ""
+menuitem "" -1
 menuitem "3Disconnect"			"disconnect"
 menuitem "2Go back to Main Menu"	"showmenu main"
 
@@ -45,7 +45,7 @@ menuitem "Join a server"		"searchlan 1; showallservers 1; updatefrommaster; show
 menuitem "Join a LAN server"		"searchlan 2; showallservers 0; showmenu server"
 menuitem "Custom connect"		[ showmenu "Custom connect" ]
 menuitem "Connect as Admin"		[ showmenu "Admin connect" ]
-menuitem "
+menuitem "" -1
 menuitem "Force serverlist update"	"updatefrommaster 1; showmenu server"
 
 // Fancy custom connect menu.
@@ -55,7 +55,7 @@ menuinit [ alias cc1 ""; alias cc2 ""; alias cc3 "" ]	// Resets the aliases
 menuitemtextinput "Server IP/DNS: 		"	"" "alias cc1 $arg1" 
 menuitemtextinput "Server port (optional): 	"	"" "alias cc2 $arg1"
 menuitemtextinput "Server password (optional): 	"	"" "alias cc3 $arg1"
-menuitem ""
+menuitem "" -1
 menuitem "2			  [ Connect ]				" "connect $cc1 $cc2 $cc3"
 
 // Connect to a menu as admin.
@@ -65,8 +65,8 @@ menuinit [ alias acc1 ""; alias acc2 ""; alias acc3 ""; echo "3To use this menu
 menuitemtextinput "Server IP/DNS: 		"		"" "alias acc1 $arg1" 
 menuitemtextinput "Server port (optional):	"		"" "alias acc2 $arg1"
 menuitemtextinput "Server admin password: 	"		"" "alias acc3 $arg1"
-menuitem ""
-menuitem "2		  [ Admin connect ]			" "connectadmin $cc1 $cc2 $cc3"
+menuitem "" -1
+menuitem "2		  [ Admin connect ]			" "connectadmin $acc1 $acc2 $acc3"
 
 
 newmenu kick/ban
