--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -37,7 +37,7 @@ menuitem "Head-Up Display settings"                               "showmenu HUD"
 menuitem "Input controls"                     	           "showmenu controls"
 menuitem "Sound settings"                                         "showmenu sound"
 menuitem "Gameplay settings"                                 "showmenu gameplay"
-menuitem "" ""
+menuitem "" -1
 menuitem "Reset all settings"                          [ showmenu "Reset settings" ]
 
 newmenu "QUICK setup"
@@ -48,7 +48,7 @@ menuitemtextinput "Resolution (Height):  " "$scr_h" "scr_h $arg1"
 menuitemslider "Mouse sensitivity: " 2 150 "($sensitivity)" 2 "" "sensitivity $arg1"
 menuitemslider "Graphics detail: " 1 4 "(getgfxq)" 1 "low medium good best" "new_gfx_quality $arg1"
 menuitemslider "Sound detail: " 1 3 "(getsoundq)" 1 "low medium high" "new_sound_quality $arg1"
-menuitem "" ""
+menuitem "" -1
 menuitem "2			 [ OK ] 			" "resetgl"
 
 alias getgfxq [
@@ -173,8 +173,8 @@ menuitem "2   	  [ Apply! ]		" [ if $resetyes [ resesresetcfg 1; quit ] [ showm
 
 newmenu controls
 
-menuitem "Select an action below and press ENTER to change to a new key"
-menuitem ""
+menuitem "Select an action below and press ENTER to change to a new key" -1
+menuitem "" -1
 menuitemkeyinput "Forwards: "        forward
 menuitemkeyinput "Left: "           left
 menuitemkeyinput "Backwards: "       backward
@@ -195,18 +195,16 @@ menuitemkeyinput "Console output: " toggleconsole
 menuitemkeyinput "Screenshot: "     screenshot
 menuitemkeyinput "Map overview: "   toggleshowmap
 menuitemkeyinput "Drop CTF flag: "  dropflag
-menuitem ""
+menuitem "" -1
 menuitemcheckbox "Invert mouse: " "$invmouse" "invmouse $arg1"
-menuitemslider "Mouse sensitivity: " 2 150 "($sensitivity)" 2 "" "sensitivity $arg1"
-menuitem ""
+menuitemslider "Mouse sensitivity: " 3 150 "($sensitivity)" 3 "" "sensitivity $arg1"
+menuitem "" -1
 menuitem "Reset keybinds to default settings..." [ showmenu "Reset Binds" ]
 
 newmenu "Reset Binds"
 menuinit [ alias resetbindsyes 0 ] // Ensures this menu works correctly.
 menuitemcheckbox "Yes, reset all binds: " "alias resetbindsyes 1" "alias resetbindsyes $arg1" 
 menuitem "2   	  [ Apply! ]		" [ if $resetbindsyes [ resetbinds ] [ showmenu "" ] ] 
-
-alias resetbinds [ exec config/resetbinds.cfg; echo "3All binds have been reset to default values!" ]
 
 
 newmenu video
@@ -215,7 +213,7 @@ menuitemtextinput "Screen width: " "$scr_w" "scr_w $arg1"
 menuitemtextinput "Screen height: " "$scr_h" "scr_h $arg1"
 
 menuitemslider "Graphics detail: " 1 4 "(getgfxq)" 1 "low medium good best" "new_gfx_quality $arg1"
-menuitem "" ""
+menuitem "" -1
 
 menuitemslider "View of field: " 90 120 "$fov" 2 "" "fov $arg1"
 menuitemslider "Gamma: " 30  300 "$gamma"  5 "" "gamma $arg1"
@@ -224,10 +222,10 @@ menuitemslider "Gamma: " 30  300 "$gamma"  5 "" "gamma $arg1"
 
 menuitemcheckbox "Fullscreen: " "$fullscreen" "fullscreen $arg1"
 menuitemcheckbox "Vsync: " "$vsync" "vsync $arg1"
-menuitem "" ""
+menuitem "" -1
 menuitem "Advanced video settings..."	[ showmenu "Advanced video settings" ]
 
-menuitem "" ""
+menuitem "" -1
 menuitem "2		[ Apply now! ]			" resetgl
 
 newmenu "Advanced video settings"
@@ -268,18 +266,18 @@ setshadowq = [
     ]
 ]
 
-menuitemcheckbox "Dynamic lights: " "$dynlight" [dynlight $arg1]
+menuitemcheckbox "Dynamic lights: " "$dynlight" "dynlight $arg1"
 
 
 menuitemcheckbox "Bulletholes: " "$bullethole" "bullethole $arg1"
 menuitemcheckbox "Scorch: " "$scorch" "scorch $arg1"
 menuitemcheckbox "Blood: " "$blood" "blood $arg1; gib $arg1"
-menuitem "" ""
+menuitem "" -1
 menuitem "FPS Range..." [ showmenu "FPS Range" ]
 
 
-menuitem "" ""
-menuitem "2			  [ Apply now! ]				" resetgl
+menuitem "" -1
+menuitem "2			  [ Apply now! ]				" "resetgl"
 
 newmenu "FPS Range"
 
@@ -294,7 +292,7 @@ newmenu sound
 menuitemslider "Sound volume: " 0 255 "$soundvol" 16 "" "soundvol $arg1"
 menuitemslider "Music volume: " 0 255 "$musicvol" 16 "" "musicvol $arg1"
 menuitemslider "Sound detail: " 1 3 "(getsoundq)" 1 "low medium high" "new_sound_quality $arg1"
-menuitem ""
+menuitem "" -1
 menuitem "Advanced settings..." [ showmenu "Advanced settings" ]
 
 
@@ -332,7 +330,7 @@ menuitemslider "Player skins: " 0 2 "$teamdisplaymode" 1 [Normal "Colored vests"
 menuitem "Change to the enemy team" "changeteam"
 menuitem "Change weapon"        "showmenu Weapons"
 menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
-menuitem ""
+menuitem "" -1
 menuitemcheckbox "Auto map download: " "$autogetmap" "autogetmap $arg1"
 menuitemcheckbox "Auto weapon reload: " "$autoreload" "autoreload $arg1"
 menuitemcheckbox "Reduced violence mode: " "(getponiesmode)" "new_poniesmode $arg1"
@@ -353,7 +351,7 @@ menuitemcheckbox "   Spectator info " "(= $hidespecthud 0)" "hidespecthud (= $ar
 menuitemcheckbox "   Quick messages " "(= $hidehudmsgs 0)" "hidehudmsgs (= $arg1 0)"
 menuitemcheckbox "   Damage indicator " "(= $hidedamageindicator 0)" "hidedamageindicator (= $arg1 0)"
 menuitemcheckbox "   Crosshair team-sign " "$crosshairteamsign" "crosshairteamsign $arg1"
-menuitem "" ""
+menuitem "" -1
 menuitemslider "Crosshair size: " 0 50 "$crosshairsize" 5 "" "crosshairsize $arg1"
 menuitem "Change crosshair...				"	  "showmenu Crosshairs"
 
