changes from "nothing" models to clipping entity
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3202 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/packages/maps/tocatest.cfg
+++ b/ac/packages/maps/tocatest.cfg
@@ -102,7 +102,9 @@ mapmodel 4 1 0 0 "bridge"			//74  ------------
 
 mapmodel 1 8 0 0 "toca/wall"			//75
 mapmodel 0 0 0 0 "toca/guardrail"		//76
-mapmodel 1 3 0 0 "nothing"			//77 guardrail clipping
+
+mapmodel 1 3 0 0 "nothing"			//77 guardrail clipping xxxxxxxxxxxxxxxxx
+
 mapmodel 1 4 0 0 "toca/guardrail2"		//78
 mapmodel 1 4 0 0 "toca/guardrail2/gr2pole"	//79
 mapmodel 2 1 0 0 "toca/tire"			//80
@@ -111,7 +113,9 @@ mapmodel 3 3 0 0 "toca/utilitytable"		//82
 mapmodel 1 1 0 0 "toca/milkcarton"		//83
 mapmodel 0 0 0 0 "toca/bullet"			//84
 mapmodel 0 0 0 0 "toca/sgshell"			//85
-mapmodel 1 4 0 0 "nothing"			//86 guardrail2 clipping
+
+mapmodel 1 4 0 0 "nothing"			//86 guardrail2 clipping xxxxxxxxxxxxxxxx
+
 mapmodel 1 20 0 0 "toca/electricpole"		//87
 mapmodel 1 3 0 0 "toca/trashcan"		//88 
 mapmodel 1 5 0 0 "toca/signs/target"		//89
@@ -129,7 +133,9 @@ mapmodel 0 0 0 0 "toca/signs/explosives"	//100
 mapmodel 4 1 0 0 "toca/platformmet"		//101
 mapmodel 4 1 7 0 "toca/stairs1"			//102
 mapmodel 4 1 7 0 "toca/stairs2"			//103
-mapmodel 2 1 0 0 "nothing"			//104 stairs clipping
+
+mapmodel 2 1 0 0 "nothing"			//104 stairs clipping xxxxxxxxxxxxxxxxxxx
+
 mapmodel 1 1 0 0 "toca/cinderblock"		//105
 mapmodel 1 8 0 0 "toca/corrugated/fence1"	//106
 mapmodel 1 8 0 0 "toca/corrugated/fence2"	//107
@@ -153,7 +159,7 @@ mapmodel 1 1 0 0  "toca/pipes/metalpipe"	//122
 mapmodel 1 1 0 0  "toca/pipes/metalpipe2"	//123
 mapmodel 1 1 0 0  "toca/ceilingfan"		//124
 mapmodel 0 20 0 0  "toca/pine"			//125
-mapmodel 2 7 0 0  "toca/servercluster/rack"	//126
+mapmodel 0 0 0 0  "toca/servercluster/rack"	//126
 mapmodel 2 1 0 0  "toca/servercluster/U3_1"	//127 U3 = 1 cube high
 mapmodel 2 1 0 0  "toca/servercluster/U3_2"	//128
 mapmodel 2 1 0 0  "toca/servercluster/U3_3"	//129
@@ -173,7 +179,7 @@ mapmodel 0 2 0 0  "toca/treetrunk1"		//140
 
 mapmodel 0 2 0 0 "nothing"			//141 ------test clip
 mapmodel 1 2 0 0 "nothing"			//142 ------test clip
-
+mapmodel 0 1 0 0 "nothing"			//143 ------test clip
 
 
 // skybox for this map - check /packages/skymaps/
