moved a bunch of script to defaults.cfg and made sure editent only works in editmode
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3203 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/resetbinds.cfg
+++ b/ac/config/resetbinds.cfg
@@ -40,7 +40,7 @@ bind 7 ""
 bind 8 "vdelta -1"
 bind 9 "vdelta 1"
 bind COLON ""
-bind SEMICOLON "editent"
+bind SEMICOLON [ if $editing [ editent ] ]
 bind LESS ""
 bind EQUALS ""
 bind GREATER ""
