--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -302,27 +302,6 @@ menuitemcheckbox "Footsteps: " "$footsteps" "footsteps $arg1"
 menuitemcheckbox "Bullet hit: " "$bulletbouncesound" "bulletbouncesound $arg1"
 menuitemcheckbox "Bullet near-miss: " "$bulletairsound" "bulletairsound $arg1"
 
-
-alias new_poniesmode [
-    if (= $arg1 1) [ 
-        blood 0
-        gibnum 0
-        loop i (- 31 24) [ mutesound (+ (+ $i 24) 1) ] // mute pain sounds
-        echo OMG!Ponies! mode enabled - Violent game content has now been reduced.
-
-    ] [ // violent
-        blood 1
-        gibnum 6
-        unmuteallsounds
-        echo OMG!Ponies! mode disabled...
-    ]
-]
-
-alias getponiesmode [
-    result (= $blood 0)
-]
-
-
 newmenu gameplay
 
 menuitemtextinput "Nickname: " "result $curname" "name $arg1"
@@ -333,7 +312,7 @@ menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
 menuitem "" -1
 menuitemcheckbox "Auto map download: " "$autogetmap" "autogetmap $arg1"
 menuitemcheckbox "Auto weapon reload: " "$autoreload" "autoreload $arg1"
-menuitemcheckbox "Reduced violence mode: " "(getponiesmode)" "new_poniesmode $arg1"
+menuitemcheckbox "Reduced violence mode: " "(getponiesmode)" "reducedviolencemode $arg1"
 menuitemcheckbox "Show gamemodes as acronyms: " "$modeacronyms" "modeacronyms $arg1"
 menuitemcheckbox "Show quit dialog when quitting: " "$askquit" "askquit = $arg1"
 
@@ -354,6 +333,3 @@ menuitemcheckbox "   Crosshair team-sign " "$crosshairteamsign" "crosshairteamsi
 menuitem "" -1
 menuitemslider "Crosshair size: " 0 50 "$crosshairsize" 5 "" "crosshairsize $arg1"
 menuitem "Change crosshair...				"	  "showmenu Crosshairs"
-
-
-
