undone some dumb stuff...
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3204 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -9,6 +9,13 @@ menuitem "Map operations..."			[ showmenu "Map operations" ]
 menuitem "Bots..."				[ showmenu "Creating bot waypoints" ]
 menuitem "Help?"				[ echo "2Please read the AssaultCube readme which has a detailed guide on mapediting. ]
 
+// editent command
+alias editent [
+    alias enttype (getenttype)
+    if (! (strcmp enttype "")) [
+        saycommand "/entset" $enttype (getentattr 0) (getentattr 1) (getentattr 2) (getentattr 3)
+    ]
+]
 
 //Lighting menu.
 newmenu "Lighting"
