--- a/ac/config/menus_settings.cfg
+++ b/ac/config/menus_settings.cfg
@@ -316,6 +316,24 @@ menuitemcheckbox "Reduced violence mode: " "(getponiesmode)" "reducedviolencemod
 menuitemcheckbox "Show gamemodes as acronyms: " "$modeacronyms" "modeacronyms $arg1"
 menuitemcheckbox "Show quit dialog when quitting: " "$askquit" "askquit = $arg1"
 
+// Reduced game violence mode...
+alias reducedviolencemode [
+    if (= $arg1 1) [ 
+        blood 0
+        gibnum 0
+        loop i (- 31 24) [ mutesound (+ (+ $i 24) 1) ] // Mute pain sounds
+        echo OMG!Ponies! mode enabled - Violent game content has now been reduced.
+    ] [ // Violent
+        blood 1
+        gibnum 6
+        unmuteallsounds
+        echo OMG!Ponies! mode disabled...
+    ]
+]
+alias getponiesmode [
+    result (= $blood 0)
+]
+
 newmenu HUD
 
 menuitem "Show:" -1
