--- a/ac/config/defaults.cfg
+++ b/ac/config/defaults.cfg
@@ -1,24 +1,15 @@
 // These default settings get executed whenever "saved.cfg" is not available.
 // Do not modify anything below, instead change settings in game, or add to autoexec.cfg
 
-name "unarmed"     // change!
-
-loadcrosshair default.png	// choose another crosshair, see packages/misc/crosshairs/
-
-skin 0			   // change your look
-autoreload 1	   // reload the guns automatically
+name "unarmed"     		// Change your name!
+loadcrosshair default.png	// Choose another crosshair, see packages/misc/crosshairs/
+skin 0				// Change your look.
+autoreload 1			// Reload the guns automatically by default.
 
 alias primary [ weapon (currentprimary) ]
 alias secondary [ weapon 1 ]
 alias melee [ weapon 0 ]
 alias grenades [ weapon 6 ]
-
-// "resetbinds" command.
-alias resetbinds [ exec config/resetbinds.cfg; echo "3All binds have been reset to default values!" ]
-
-// "changeteam" command.
-alias changeteam [ if (= (curteam) 1) [ team CLA; echo "You are now on team 3CLA" ] [ team RVSF; echo "You are now on team 1RVSF" ] ]
-
 
 //for alternative weapon binding (more economic) see the end of this file
 
@@ -40,7 +31,7 @@ loop i 8 [ alias (concatword altaction_ $i) quicknadethrow ] // quick nade throw
 alias altaction_4 [ zoom 1; onrelease [ zoom 0 ] ] // sniper
 alias altaction_6 [ attack ] // grenade 
 
-// NOTE: by default this zoom script just devides your sensitivity by 2 while you use the scope
+// NOTE: by default this zoom script just divides your sensitivity by 2 while you use the scope
 // if you want to set your own value for it, go to the following line and 
 // replace (div $sensitivity 2) by your desired sensitivity value:
 
