more menus stuff
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3207 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_bot.cfg
+++ b/ac/config/menus_bot.cfg
@@ -74,11 +74,11 @@ menuitem "Empty Map"                        "emptymap"
 newmenu botskill
 
 alias showmenu_enemies [ if (= $tmp_mode 7) [ showmenu "team enemies" ] [ showmenu enemies ] ]
-menuitem "best" "alias tmp_botskill best; showmenu_enemies"
-menuitem "good (default)" "alias tmp_botskill good; showmenu_enemies"
-menuitem "medium" "alias tmp_botskill medium; showmenu_enemies"
-menuitem "worse" "alias tmp_botskill worse; showmenu_enemies"
-menuitem "bad" "alias tmp_botskill bad; showmenu_enemies"
+menuitem "Best" "alias tmp_botskill best; showmenu_enemies"
+menuitem "Good (default)" "alias tmp_botskill good; showmenu_enemies"
+menuitem "Medium" "alias tmp_botskill medium; showmenu_enemies"
+menuitem "Worse" "alias tmp_botskill worse; showmenu_enemies"
+menuitem "Bad" "alias tmp_botskill bad; showmenu_enemies"
 
 
 alias genenemyitems [
@@ -120,8 +120,8 @@ newmenu Waypoints
 menuitem "Add a waypoint"			"addwp 0"
 menuitem "Add auto-connecting waypoint"		"addwp 1"
 menuitem "" -1
-menuitem "Delete a waypoint"			"delwp"
-menuitem "Delete all waypoints"			[ showmenu "Delete all waypoints?" ]
+menuitem "Delete nearest waypoint"		"delwp"
+menuitem "Delete all waypoints"			[ showmenu "Delete all waypoints" ]
 
 
 newmenu Paths
@@ -147,7 +147,8 @@ menuitemslider "Waypoint visibility: " 0 1 " " 1 ["Hide waypoints" "Show waypoin
 menuitemslider "Select/place waypoints by: " 0 1 "($xhairwpsel)" 1 ["Your current location" "Clicking a point on the grid"] "xhairwpsel $arg1"
 
 
-newmenu "Delete all waypoints?"
 
-menuitem "Yes, delete all waypoints"		"wpclear"
-menuitem "No. Leave my waypoints alone!"	"showmenu botedit"
+newmenu "Delete all waypoints"
+menuinit [ alias delallwps 0 ] // Ensures this menu works correctly.
+menuitemcheckbox "Yes, delete all waypoints: " "alias delallwps 1" "alias delallwps $arg1" 
+menuitem "2   	  [ Apply! ]		" [ if $delallwps [ wpclear ] [ showmenu "" ] ] 
