--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -17,6 +17,8 @@ menuitem "Add coloured lights	"		[ showmenu "Coloured light" ]
 menuitem "" -1
 menuitemcheckbox "Enable fullbright: 	" "$fullbright" [ fullbright $arg1 ]
 
+alias wlight 1
+alias wlight1 1
 
 newmenu "White light"
 
@@ -25,6 +27,10 @@ menuitemslider "Brightness: " 1 255 " " 5 "" "alias wlight1 $arg1"
 menuitem "" -1
 menuitem "2		[ OK ]		" "newent light $wlight $wlight1"
 
+alias clight 1
+alias clight1 1
+alias clight2 1
+alias clight3 1
 
 newmenu "Coloured light"
 
@@ -84,16 +90,32 @@ newmenu "Map operations"
 
 menuitem "Newmap (128x128 cubes - recommended)"	"newmap 7"
 menuitem "Newmap (256x256 cubes)"		"newmap 8"
-menuitem "Increase mapsize (2x)"		"mapenlarge"
-menuitem "Create a map message"			"saycommand /mapmsg "
+menuitem "Increase mapsize (2x)"		[ mapenlarge; echo "The map size has been increased by 2. However, the new space is solid. To utilize it, you will need to turn it into space, by selecting it and pressing G" ]
+menuitem "Create a map message"			[ showmenu "Map message" ]
 menuitem "Change waterlevel"			"saycommand /waterlevel "
-menuitem "Change watercolour"			"saycommand /watercolour "
+menuitem "Change watercolour"			[ showmenu "Water colour" ]
 
+newmenu "Map message"
+menuinit [ alias mapmsgtext ""; echo "1To create a message that will show on your map upon load, enter it below and then press OK..." ]
+menuitemtextinput "Your map message:  " "" "alias mapmsgtext $arg1"
+menuitem "2			[ OK ]				" [ mapmsg $mapmsgtext ]
+
+alias redw 1
+alias greenw 1
+alias bluew 1
+
+newmenu "Water colour"
+
+menuitemslider "Red pigment: " 1 255 " " 5 "" "alias redw $arg1"
+menuitemslider "Green pigment: " 1 255 " " 5 "" "alias greenw $arg1"
+menuitemslider "Blue pigment: " 1 255 " " 5 "" "alias bluew $arg1"
+menuitem "" -1
+menuitem "2		[ OK ]		" "saycommand watercolour $redw $greenw $bluew"
 
 //Mapmodels
 newmenu Mapmodels
 
-menuitem "Platforms/Clips"	"showmenu Platforms/Clips"
+menuitem "Platforms/Clips"	"showmenu Platforms"
 menuitem "Ladders/Stairs"	"showmenu Ladders/Stairs"
 menuitem "Fencing"		"showmenu Fencing"
 menuitem "Plants"     		"showmenu Plants"
@@ -107,9 +129,8 @@ menuitem "Signs"      		"showmenu Signs"
 menuitem "Other"      		"showmenu Other"
 
 
-newmenu "Platforms/Clips"
+newmenu "Platforms"
 
-menuitem "Nothing/Clip (4x4x2)"		"newent mapmodel 0"
 menuitem "Bridge (8x8)"        		"saycommand /newent mapmodel 1 "
 menuitem "Platform (8x8)"		"saycommand /newent mapmodel 57 "
 menuitem "Wire platform (8x8)"		"saycommand /newent mapmodel 73 "		
