renamed "clips" ent to "pistol"
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3209 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/docs.cfg
+++ b/ac/config/docs.cfg
@@ -954,7 +954,7 @@ docremark [For example: /mapmsg "Map By Author"];
 
 docident [newent] [Adds a new entity];
 
-docargument [type] [the entity type] [light, playerstart, clips, ammobox, grenades, health, armour, akimbo, mapmodel, ladder, ctf-flag] [0];
+docargument [type] [the entity type] [light, playerstart, pistol, ammobox, grenades, health, armour, akimbo, mapmodel, ladder, ctf-flag] [0];
 
 docargument [value1] [see newent 'type'] [] [0];
 
@@ -980,7 +980,7 @@ docident [newent armour] [Adds a new armour item.];
 
 
 
-docident [newent clips] [Adds a pistol magazine item.];
+docident [newent pistol] [Adds a pistol magazine item.];
 
 
 
