--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -58,7 +58,7 @@ menuitem "Ladder entity"	"saycommand /newent ladder "
 newmenu Pickups
 
 menuitem "Health"		"newent health"
-menuitem "Pistol Magazine"	"newent clips"
+menuitem "Pistol Magazine"	"newent pistol"
 menuitem "Box of Ammo"		"newent ammobox"
 menuitem "Kevlar Vest"		"newent armour"
 menuitem "Akimbo"		"newent akimbo"
