--- a/ac/config/scripts.cfg
+++ b/ac/config/scripts.cfg
@@ -18,7 +18,7 @@ loop i (listlen $mapcommands) [
 
 complete demo "demos" dmo
 
-alias entcomplete [listcomplete $arg1 "light playerstart clips ammobox grenades health armour akimbo mapmodel trigger ladder ctf-flag sound clip"]
+alias entcomplete [listcomplete $arg1 "light playerstart pistol ammobox grenades health armour akimbo mapmodel trigger ladder ctf-flag sound clip"]
 
 entcomplete newent
 
